Android accessibility: Making non focusable children of a control not interesting

For Android, the a11y focus was landing on non focusable children of a control.
This CL makes them non interesting and always places the a11y focus on the
control as a whole.

Bug: 784321
Change-Id: Ib8ebb6f19bb0fc404872570f8998c8eaa0e65100
Reviewed-on: https://chromium-review.googlesource.com/809934
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Commit-Queue: Isha Bobra <ibobra@google.com>
Cr-Commit-Position: refs/heads/master@{#522534}
Former-commit-id: 9684de17594ab4a8fb00318dc588842f42bd8bca